# go2_pathtracking

./: CMakeLists.txt  package.xml
include/common/: go2_move_client.h
src/: test_track_node.cpp
src/common/: go2_move_client.cpp
src/go2/: pathtracking_node.cpp  pathtracking_zmq_node.cpp
