<?xml version="1.0"?>
<?xml-model href="" schematypens=""?>
<package format="2">
  <name>go2_pathtracking</name>
  <version>0.0.0</version>
  <description>Unitree go2_pathtracking</description>
  <maintainer email="zsh000@sjtu.edu.cn">sjtu</maintainer>
  <license>BSD 3-Clause License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>unitree_go</depend>
  <depend>unitree_api</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>eigen3_cmake_module</build_depend>
  <depend>libzmq3-dev</depend> <!-- ZeroMQ development files -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
